==> miniwinwm/camlib/camlib_lpc54628/source/camlib.c <==
#include <stdbool.h>
#include <stdint.h>
#include "fsl_ctimer.h"
#include "fsl_iocon.h"
#include "fsl_gpio.h"
#include "fsl_i2c.h"
#include "fsl_iocon.h"
#define IOCON_PIO_DIGITAL_EN 0x0100u   /*!<@brief Enables digital function */
#define IOCON_PIO_FUNC0 0x00u          /*!<@brief Selects pin function 1 */
#define IOCON_PIO_FUNC2 0x02u          /*!<@brief Selects pin function 2 */
#define IOCON_PIO_FUNC3 0x03u          /*!<@brief Selects pin function 3 */
#define IOCON_PIO_FUNC4 0x04u          /*!<@brief Selects pin function 4 */
#define IOCON_PIO_INPFILT_OFF 0x0200u  /*!<@brief Input filter disabled */
#define IOCON_PIO_INV_DI 0x00u         /*!<@brief Input function is not inverted */
#define IOCON_PIO_MODE_INACT 0x00u     /*!<@brief No addition pin function */
#define IOCON_PIO_MODE_PULLUP 0x20u    /*!<@brief Selects pull-up function */
#define IOCON_PIO_OPENDRAIN_DI 0x00u   /*!<@brief Open drain is disabled */
#define IOCON_PIO_SLEW_STANDARD 0x00u  /*!<@brief Standard mode, output slew rate control is enabled */
#define IOCON_PIO_OPENDRAIN_EN 0x0800u /*!<@brief Open drain is enabled */
#define I2C_MASTER_CLOCK_FREQUENCY (12000000)
#define I2C_MASTER_SLAVE_ADDR_7BIT 0x21U

void camlib_capture(void)
{
	uint_fast32_t i;

	__disable_irq();

	// wait for VS
	while (GPIO_PinRead(GPIO, 3U, 27U) == 0U)
	{
	}
	while (GPIO_PinRead(GPIO, 3U, 27U) == 1U)
	{
	}
	i = 0UL;

	for (uint_fast8_t y = 0U; y < 120U; y++)
	{
		// wait for first HS
		while (GPIO_PinRead(GPIO, 3U, 28U) == 0U)
		{
		}

		while (GPIO_PinRead(GPIO, 3U, 28U) == 1U)
		{
		}

		// wait for second HS
		while (GPIO_PinRead(GPIO, 3U, 28U) == 0U)
		{
		}

		for (uint_fast16_t x = 0U; x < 160U; x++)
		{
			// wait for PLK
			while (GPIO_PinRead(GPIO, 3U, 29U) == 0U)
			{
			}

			frame_buffer[i] = GPIO_PortRead(GPIO, 3U) >> 16;
			frame_buffer[i] &= ~0b10000000U;
			frame_buffer[i] |= (GPIO_PinRead(GPIO, 3U, 26U) << 7);
			i++;

			// wait for ~PLK
			while (GPIO_PinRead(GPIO, 3U, 29U) == 1U)
			{
			}

			// wait for PLK
			while (GPIO_PinRead(GPIO, 3U, 29U) == 0U)
			{
			}

			frame_buffer[i] = GPIO_PortRead(GPIO, 3U) >> 16;
			frame_buffer[i] &= ~0b10000000U;
			frame_buffer[i] |= (GPIO_PinRead(GPIO, 3U, 26U) << 7);
			i++;

			// wait for ~PLK
			while (GPIO_PinRead(GPIO, 3U, 29U) == 1U)
			{
			}

			// repeat ignoring read
			while (GPIO_PinRead(GPIO, 3U, 29U) == 0U)
			{
			}

			while (GPIO_PinRead(GPIO, 3U, 29U) == 1U)
			{
			}

			while (GPIO_PinRead(GPIO, 3U, 29U) == 0U)
			{
			}

			while (GPIO_PinRead(GPIO, 3U, 29U) == 1U)
			{
			}
		}
	}

	__enable_irq();
}

static void xclk_init(void)
{
	ctimer_config_t config;
	ctimer_match_config_t matchConfig;

	/* Enable the asynchronous bridge */
	SYSCON->ASYNCAPBCTRL = 1;

	CLOCK_AttachClk(kMAIN_CLK_to_ASYNC_APB);

	CLOCK_EnableClock(kCLOCK_Iocon);
	const uint32_t port2_pin2_config = (/* Pin is configured as CTIMER1_MAT1 */
										 IOCON_PIO_FUNC4 |
										 /* No addition pin function */
										 IOCON_PIO_MODE_INACT |
										 /* Input function is not inverted */
										 IOCON_PIO_INV_DI |
										 /* Enables digital function */
										 IOCON_PIO_DIGITAL_EN |
										 /* Input filter disabled */
										 IOCON_PIO_INPFILT_OFF |
										 /* Standard mode, output slew rate control is enabled */
										 IOCON_PIO_SLEW_STANDARD |
										 /* Open drain is disabled */
										 IOCON_PIO_OPENDRAIN_DI);
	/* PORT4 PIN5 is configured as CTIMER1_MAT1 */
	IOCON_PinMuxSet(IOCON, 2U, 2U, port2_pin2_config);

	CTIMER_GetDefaultConfig(&config);
	CTIMER_Init(CTIMER1, &config);

	matchConfig.enableCounterReset = true;
	matchConfig.enableCounterStop  = false;
	matchConfig.matchValue         = 5;
	matchConfig.outControl         = kCTIMER_Output_Toggle;
	matchConfig.outPinInitState    = true;
	matchConfig.enableInterrupt    = false;
	CTIMER_SetupMatch(CTIMER1, kCTIMER_Match_1, &matchConfig);
	CTIMER_StartTimer(CTIMER1);
}

static void sccb_init(void)
{
	i2c_master_config_t masterConfig;

	/* attach 12 MHz clock to FLEXCOMM8 (I2C master) */
	CLOCK_AttachClk(kFRO12M_to_FLEXCOMM8);

	/* reset FLEXCOMM for I2C */
	RESET_PeripheralReset(kFC8_RST_SHIFT_RSTn);

    const uint32_t port1_pin17_config = (/* Pin is configured as FC8_RXD_SDA_MOSI */
                                         IOCON_PIO_FUNC2 |
                                         /* Selects pull-up function */
                                         IOCON_PIO_MODE_PULLUP |
                                         /* Input function is not inverted */
                                         IOCON_PIO_INV_DI |
                                         /* Enables digital function */
                                         IOCON_PIO_DIGITAL_EN |
                                         /* Input filter disabled */
                                         IOCON_PIO_INPFILT_OFF |
                                         /* Standard mode, output slew rate control is enabled */
                                         IOCON_PIO_SLEW_STANDARD |
                                         /* Open drain is enabled */
                                         IOCON_PIO_OPENDRAIN_EN);
    /* PORT1 PIN17 (coords: N12) is configured as FC8_RXD_SDA_MOSI */
    IOCON_PinMuxSet(IOCON, 1U, 17U, port1_pin17_config);

    const uint32_t port1_pin18_config = (/* Pin is configured as FC8_TXD_SCL_MISO */
                                         IOCON_PIO_FUNC2 |
                                         /* Selects pull-up function */
                                         IOCON_PIO_MODE_PULLUP |
                                         /* Input function is not inverted */
                                         IOCON_PIO_INV_DI |
                                         /* Enables digital function */
                                         IOCON_PIO_DIGITAL_EN |
                                         /* Input filter disabled */
                                         IOCON_PIO_INPFILT_OFF |
                                         /* Standard mode, output slew rate control is enabled */
                                         IOCON_PIO_SLEW_STANDARD |
                                         /* Open drain is enabled */
                                         IOCON_PIO_OPENDRAIN_EN);
    /* PORT1 PIN18 (coords: D1) is configured as FC8_TXD_SCL_MISO */
    IOCON_PinMuxSet(IOCON, 1U, 18U, port1_pin18_config);


    /*
     * masterConfig.debugEnable = false;
     * masterConfig.ignoreAck = false;
     * masterConfig.pinConfig = kI2C_2PinOpenDrain;
     * masterConfig.baudRate_Bps = 100000U;
     * masterConfig.busIdleTimeout_ns = 0;
     * masterConfig.pinLowTimeout_ns = 0;
     * masterConfig.sdaGlitchFilterWidth_ns = 0;
     * masterConfig.sclGlitchFilterWidth_ns = 0;
     */
    I2C_MasterGetDefaultConfig(&masterConfig);

    /* Change the default baudrate configuration */
    masterConfig.baudRate_Bps = 100000UL;

    /* Initialize the I2C master peripheral */
    I2C_MasterInit((I2C_Type *)I2C8_BASE, &masterConfig, I2C_MASTER_CLOCK_FREQUENCY);
}

static void cam_paralell_io_init(void)
{
    CLOCK_EnableClock(kCLOCK_Gpio3);

    const uint32_t LED3 = IOCON_FUNC0 | IOCON_MODE_PULLUP | IOCON_DIGITAL_EN | IOCON_INPFILT_OFF;

    IOCON_PinMuxSet(IOCON, 3, 16, LED3);
    IOCON_PinMuxSet(IOCON, 3, 17, LED3);
    IOCON_PinMuxSet(IOCON, 3, 18, LED3);
    IOCON_PinMuxSet(IOCON, 3, 19, LED3);
    IOCON_PinMuxSet(IOCON, 3, 20, LED3);
    IOCON_PinMuxSet(IOCON, 3, 21, LED3);
    IOCON_PinMuxSet(IOCON, 3, 22, LED3);
    IOCON_PinMuxSet(IOCON, 3, 26, LED3);

    IOCON_PinMuxSet(IOCON, 3, 27, LED3);
    IOCON_PinMuxSet(IOCON, 3, 28, LED3);
    IOCON_PinMuxSet(IOCON, 3, 29, LED3);

    gpio_pin_config_t pin_config;
    pin_config.pinDirection = kGPIO_DigitalInput;

    GPIO_PinInit(GPIO, 3, 16, &pin_config);
    GPIO_PinInit(GPIO, 3, 17, &pin_config);
    GPIO_PinInit(GPIO, 3, 18, &pin_config);
    GPIO_PinInit(GPIO, 3, 19, &pin_config);
    GPIO_PinInit(GPIO, 3, 20, &pin_config);
    GPIO_PinInit(GPIO, 3, 21, &pin_config);
    GPIO_PinInit(GPIO, 3, 22, &pin_config);
    GPIO_PinInit(GPIO, 3, 26, &pin_config);

    GPIO_PinInit(GPIO, 3, 27, &pin_config);
    GPIO_PinInit(GPIO, 3, 28, &pin_config);
    GPIO_PinInit(GPIO, 3, 29, &pin_config);
}
